# hypergraph

./: .gitignore  Cargo.toml  README.md
src/: hypergraph.rs  json.rs  main.rs
