[package]
name = "hypergraph"
version = "0.1.0"
authors = ["Jake Lang <jak3lang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6"
log = "0.4.8"
simple_logger = "1.6.0"
serde = "1.0.106"
serde_json = "1.0.51"
clap = "2.33.0"
